--- a/exercice1.html
+++ b/exercice1.html
@@ -52,8 +52,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h1> Exercice 3 <h1>
 
   <p> Tracker le lien ci-dessous en utilisant la méthode datalayer.push</p> 
-    <p><a href="https://arthurseche.github.io/eleve11/hello.html">homepagedatalayer</a></p>
- 
+  //  <p><a href="https://arthurseche.github.io/eleve11/hello.html">homepagedatalayer</a></p>
+     <p> <a href="https://arthurseche.github.io/eleve11/hello.html" name="button1" onclick="dataLayer.push({'event': 'button1-click'});">homepagedatalayer</a></p>
+
     
   </div>
   <div class="footer">
