--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="fr">
 <head>
-    <script>
+  <script>
   dataLayer = [{
-    'contactCategory': 'signup'
+    'pageCategory': 'contact'
   }];
 </script>
 <!-- Google Tag Manager -->
