--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
 <head>
   <script>
   dataLayer = [{
-    'pageCategory': 'signup'
+    'pageCategory': 'hello'
   }];
 </script>
   <!-- Google Tag Manager -->
