--- a/hello.html
+++ b/hello.html
@@ -1,13 +1,6 @@
 <!doctype html>
 <html lang="fr">
 <head>
- <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PF9229C');</script>
-<!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title> Bienvenue !</title>
   <meta name="description" content="Bienvenue sur ce site d'exercice GTM !"> <!-- Meta Description -->
@@ -16,10 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="stylesheet" href="style.css">
   </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PF9229C"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
   <div class="container">
     <div class="main">
       <div class="header">
@@ -30,6 +20,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p> Tu trouveras ci-dessous la liste vers les différentes pages du site :</p> 
     
   <p><a href="https://arthurseche.github.io/eleve11/exercice1.html"> exercices </a> <br>
+   <a href="https://arthurseche.github.io/eleve11/exercice2.html"> exercices 2 </a> <br>
   <a href="https://arthurseche.github.io/eleve11/contact.html"> contact </a> <br>
     <a href="https://arthurseche.github.io/eleve11/produit.html"> produit </a></p>
   <p> Bon courage! </p>                                                       
