--- a/hello.html
+++ b/hello.html
@@ -33,7 +33,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <p> Tu trouveras ci-dessous la liste vers les différentes pages du site :</p> 
     
-  <p><a href="https://arthurseche.github.io/eleve11/exercice1.html"> exercices </a> <br>
+  <p><a href="https://arthurseche.github.io/eleve11/exercice1.html"> exercices 1 </a> <br>
    <a href="https://arthurseche.github.io/eleve11/exercice2.html"> exercices 2 </a> <br>
   <a href="https://arthurseche.github.io/eleve11/contact.html"> contact </a> <br>
     <a href="https://arthurseche.github.io/eleve11/produit.html"> produit </a></p>
