--- a/hello.html
+++ b/hello.html
@@ -36,7 +36,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p><a href="https://arthurseche.github.io/eleve26/exercice1.html"> exercices 1 </a> <br>
    <a href="https://arthurseche.github.io/eleve26/exercice2.html"> exercices 2 </a> <br>
   <a href="https://arthurseche.github.io/eleve26/contact.html"> contact </a> <br>
-    <a href="https://arthurseche.github.io/elev261/produit.html"> produit </a></p>
+    <a href="https://arthurseche.github.io/eleve26/produit.html"> produit </a></p>
   <p> Bon courage! </p>                                                       
   </div>
   <div class="footer">
