--- a/exercice2.html
+++ b/exercice2.html
@@ -37,7 +37,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
 <p> Tracker les liens suivant en utilisant les trois méthodes suivantes : variables / class / datalayer.push </p> 
 <p><a href="https://arthurseche.github.io/eleve26/hello.html"> lien 1</a> <br>
-    <a class="capeutmarcher" href="https://arthurseche.github.io/eleve26/hello.html">lien 2</a><br>
+    <a href="https://arthurseche.github.io/eleve26/hello.html"class="cool">lien 2</a><br>
     <p> <a href="https://arthurseche.github.io/eleve26/hello.html" name="clicDatalayer" >Lien3</a></p> 
   </p>
   
